@@ -24,4 +24,3 @@
 
 -gal='first any sum sum0 reduce'
 
-
