@@ -31,30 +31,41 @@ sub check_xrandr
 
 sub _xrandr_extract_modes
 {
-	my ($self, @output) = @_;
+	my ($self, $feature, @output) = @_;
 
 	my $context;
 	my $base;
-	my %modes;
+	my %resolution;
 	my %active;
+
+	my $max_res = $feature->config->{max_resolution};
+	my $compare_res = sub {
+		my ($a_x, $a_y) = split /x/, $a;
+		my ($b_x, $b_y) = split /x/, $b;
+
+		return $a_x <=> $b_x
+			|| $a_y <=> $b_y;
+	};
 
 	# assume first item is base
 	foreach my $line (@output) {
-		if ($line =~ /^(\S+)\s+connected/) {
+		if ($line =~ /^(\S+)\s+(dis)?connected\s*(primary)?\s*(\d+x\d+)?/) {
 			$context = $1;
 			$base //= $context;
+			$active{$context} = !!1
+				if defined $4;
 		}
-		elsif ($context && $line =~ /^\s+(\d+x\d+)/) {
-			my $mode = $1;
-			push @{$modes{$context}}, $mode;
-			$active{$context} = $mode
-				if $line =~ m/\*/;
+		elsif ($context && !$resolution{$context} && $line =~ /^\s+(\d+x\d+)/) {
+			my $res = $1;
+
+			# assume first listed resolution is the largest
+			$resolution{$context} = $max_res ? (sort { $compare_res->() } $res, $max_res)[0] : $res;
 		}
 	}
 
 	return {
 		base => $base,
-		modes => \%modes,
+		resolution => \%resolution,
 		active => \%active,
 	};
 }
@@ -66,10 +77,11 @@ sub get_xrandr
 	return $self->owner->broadcast($feature->config->{command})
 		->then(
 			sub {
-				my $xrandr_data = $self->_xrandr_extract_modes(@_);
+				my $xrandr_data = $self->_xrandr_extract_modes($feature, @_);
 				my @result;
-				foreach my $output (sort keys %{$xrandr_data->{active}}) {
-					push @result, "$output: $xrandr_data->{active}{$output}";
+				foreach my $output (sort keys %{$xrandr_data->{resolution}}) {
+					my $active = $xrandr_data->{active}{$output} ? ' (active)' : '';
+					push @result, "$output$active: $xrandr_data->{resolution}{$output}";
 				}
 
 				return join ', ', @result;
@@ -83,8 +95,10 @@ sub set_xrandr
 
 	my $mode;
 	my $side;
+	my $auto;
 
 	if ($input eq 'auto') {
+		$auto = 1;
 		$mode = $feature->config->{auto_mode};
 		$side = $feature->config->{auto_side};
 	}
@@ -100,45 +114,66 @@ sub set_xrandr
 			if PCRD::Util::any { $side eq $_ } qw(left right);
 	}
 
-	my %command = (base => [], external => []);
-	foreach my $flag (split //, $mode) {
-		if ($flag eq 'I') {
-			die 'side is required for I' unless $side;
-			push @{$command{external}}, '--auto', "--$side", 'BASE';
-		}
-		elsif ($flag eq 'O') {
-			push @{$command{external}}, '--off';
-			push @{$command{base}}, '--auto', '--primary';
-		}
-		elsif ($flag eq 'P') {
-			push @{$command{external}}, '--primary';
-		}
-		elsif ($flag eq 'E') {
-			push @{$command{base}}, '--off';
-		}
-		else {
-			die "please specify any of: I, O, P, E";
-		}
-	}
-
 	return $self->owner->broadcast($feature->config->{command})
 		->then(
 			sub {
-				my $xrandr_data = $self->_xrandr_extract_modes(@_);
-				my @modes = sort keys %{$xrandr_data->{modes}};
-				@modes = grep { $_ ne $xrandr_data->{base} } @modes;
-				@modes = ($xrandr_data->{base}, $modes[0]);
+				my $xrandr_data = $self->_xrandr_extract_modes($feature, @_);
 
+				# get outputs - active and available
+				my $base = $xrandr_data->{base};
+				my %active = %{$xrandr_data->{active}};
+				my %available = %{$xrandr_data->{resolution}};
+
+				# first output will always be base, then one of the other outputs
+				my @outputs = ($base, sort grep { $_ ne $base } keys %active, keys %available);
+				splice @outputs, 2;
+				my $external = $outputs[1] // '';
+
+				# if there is no external display connected, or base display is
+				# not active, simply turn on the base one
+				if ($auto && (%active == 2 || (%active == 1 && !$active{$base}))) {
+					$mode = 'O';
+				}
+
+				# prepare command tree
+				my %command;
+				foreach my $flag (split //, $mode) {
+					if ($flag eq 'I') {
+						die 'side is required for I' unless $side;
+						die 'no external display is connected' unless $external;
+						push @{$command{$external}}, '--mode', $available{$external}, "--$side", $base;
+					}
+					elsif ($flag eq 'O') {
+						push @{$command{$external}}, '--off'
+						if $external;
+						push @{$command{$base}}, '--mode', $available{$base}, '--primary';
+					}
+					elsif ($flag eq 'P') {
+						die 'no external display is connected' unless $external;
+						push @{$command{$external}}, '--primary';
+					}
+					elsif ($flag eq 'E') {
+						die 'no external display is connected' unless $external;
+						push @{$command{$base}}, '--off';
+					}
+					else {
+						die "please specify any of: I, O, P, E";
+					}
+				}
+
+				# disable any active monitors
+				foreach my $out (keys %active) {
+					next if $out eq $base;
+					next if $out eq $external;
+					$command{$out} = ['--off'];
+				}
+
+				# prepare and run command
 				my @cmd;
-				if (@{$command{base}}) {
-					push @cmd, '--output', 'BASE', @{$command{base}};
+				foreach my $out (keys %command) {
+					push @cmd, '--output', $out, @{$command{$out}};
 				}
 
-				if (@{$command{external}}) {
-					push @cmd, '--output', 'EXTERNAL', @{$command{external}};
-				}
-
-				@cmd = map { $_ eq 'BASE' ? $modes[0] : $_ eq 'EXTERNAL' ? $modes[1] : $_ } @cmd;
 				return $self->owner->broadcast($feature->config->{command}, @cmd)->then(sub { !!1 });
 			}
 		);
@@ -174,6 +209,10 @@ sub _build_features
 				auto_side => {
 					desc => 'preferred auto side (left, right, above, below)',
 					value => 'left',
+				},
+				max_resolution => {
+					desc => 'preferred maximum resolution (AxB, 0 to disable) - must be valid',
+					value => 0,
 				},
 			},
 			needs_agent => 1,
